--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+* {
+    color: whitesmoke;
+}
+
 body {
     background: url(../images/bg.png);
 }
@@ -8,7 +12,7 @@ h1 {
 }
 
 .container-fluid {
-    background: white;
+    background: #3b3a3a;
     display: block;
     width: 400px;
     height: 400px;
@@ -17,3 +21,21 @@ h1 {
     border-radius: 4px;
     text-align: center;
 }
+
+img {
+    padding: 10px;
+}
+
+#cat {
+    text-align: center;
+    position: relative;
+    animation-name: cat;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+  }
+  
+  @keyframes cat {
+    0%  {left:10px; top:0px;}
+    50%  {left:-10px; top:0px;}
+    100%  {left:10px; top:0px;}    
+  }
